Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59888

UX Issue: Drag & Drop does not work well with MultiSelection/ExtendedSelection

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.2.0 Alpha
    • 5.8.0, 5.9.3, 5.12.10, 5.13.0, 5.15.2, 6.0.1
    • Widgets: Itemviews
    • Windows 7 64 bit. We're using Qt 5.3.1 but i just tested with Qt 5.8 - it's the same there.
    • efdaba37d61e82f27a7bcbb49e176313452f59f9 (qt/qtbase/dev)

      When selectionMode = MultiSelection or ExtendedSelection
      and dragDropMode = DragDrop

      then starting a drag&drop operation will change the selection before the drag&drop starts, which is not what the user expects.

      The problem is that the selection changes are handled when the mouse button is pressed, while the drag & drop starts later. If there would be an option (i'll gladly also take a workaround for this) for selection changes to be triggered only on mouse release, this would solve the issue.

      A good example on how to handle this is windows explorer - it will change the (multi) selection only on mouse release, which makes it easy to drag&drop the desired selection.

      The way Qt handles this makes it so that the selection always changes when i'm trying to drag&drop it somewhere - making it very hard and counter intuitive to do what i want.

        1. test.ui
          5 kB
          Peter Prade
        2. qtbug59888.zip
          3 kB
          Andy Shaw
        For Gerrit Dashboard: QTBUG-59888
        # Subject Branch Project Status CR V

            vhilshei Volker Hilsheimer
            prade Peter Prade
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: